<resources>
    <string name="content">Content</string>
    <string name="loading">Loading</string>
    <string name="long_empty">Empty Long Long Long Long Long Long Long</string>
    <string name="long_sub_empty">Where is chameleon? Where is chameleon? Where is chameleon? Where is chameleon? Where is chameleon?</string>
    <string name="empty">Not posted anything yet!!</string>
    <string name="sub_empty">No Records Found</string>
    <string name="error2">Oops!</string>
    <string name="sub_error2">Something went wrong</string>
    <string name="error">Oops!</string>
    <string name="sub_error">Something went wrong</string>
    <string name="instore_try_online">Please try online</string>
    <string name="credecard_sub_empty">Not Available</string>
    <string name="empty_trans">  Not Found !!!</string>
    <string name="sub_empty_trans">You do not have any transactions yet.</string>
    <string name="sub_empty_crede_menu">You do not have any actions </string>
    <string name="btc_address_warn">Only Send Bitcoin(BTC) to this address. </string>
    <string name="display">Display State</string>
    <string name="remove_card">Remove Card</string>
    <string name="verify_card">Verify Card </string>
    <string name="instore_empty">Not listed anything yet!!</string>
    <string name="transcations_empty">No Transactions  yet</string>
    <string name="cards_empty">Not added any Cards </string>
    <string name="choose_funding_source">Choose Funding Source</string>
    <string name="available_balance">Available Balance</string>
    <string name="you_pay">You Pay</string>
    <string name="kyc_alert_verify">Verify your Account Now</string>
    <string name="kyc_alert_verify_desc">Don\'t wait. Verify your account today!
Trouble getting verified? Contact
Customer Support</string>
    <string name="gcm_project_number">774565074522</string>
    <string name="avenir_roman">sofia_pro_regular.ttf</string>
    <string name="avenir_black">sofia_pro_regular.ttf</string>
    <string name="avenir_book">sofia_pro_regular.ttf</string>
    <string name="avenir_medium">sofia_pro_regular.ttf</string>
    <string name="ubuntu_bold">sofia_pro_regular.ttf</string>
    <string name="ubuntu_light">sofia_pro_regular.ttf</string>
    <string name="ubuntu_regular">sofia_pro_regular.ttf</string>
    <string name="poppins_italic">sofia_pro_regular.ttf</string>
    <string name="sell_all">Sell All</string>
    <string name="sell_half">Sell 1/2</string>
    <string name="sell_3_by_4">Sell 3/4</string>
    <string name="permissions_needed">Camera and Microphone permissions needed. Please allow in App Settings for additional functionality.</string>
    <string name="error_retrieving_access_token">Error retrieving token</string>
    <string name="youAreNotUpdatedTitle">Update Available</string>
    <string name="youAreNotUpdatedMessage">A new version of Niravu is available. Please update to version\s</string>
    <string name="youAreNotUpdatedMessage1">\s now</string>
    <string name="update">Update</string>
    <string name="facebook_app_id">515751829225149</string>
    <string name="fb_login_protocol_scheme">fb515751829225149</string>
    <string name="signup">Sign Up</string>
    <string name="login">Log in</string>
    <string name="login_fb">Login via Facebook</string>
    <string name="log_out">LogOut</string>
    <string name="prompt_name">Name</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_amont">Enter Amount</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_phone">Phone number</string>
    <string name="signup_fb">Sign up via Facebook</string>
    <string name="e_phonenumber">Enter your phone number </string>
    <string name="e_con_code">Enter confirmation code</string>
    <string name="phone">Phone number</string>
    <string name="comments">Add a comment.</string>
    <string name="otp_hint">Please enter the verification code that was sent to </string>
    <string name="create_account">Create account</string>
    <string name="verify_phone">Verify phone number</string>
    <string name="submit">Submit</string>
    <string name="send_message">Send messsage</string>
    <string name="save">Save</string>
    <string name="read_understand">I have read, understand, and agree to be bound by the</string>
    <string name="agree_terms_alert">You need to agree to Terms of use before signing up</string>
    <string name="term_of_use"> Terms of Use</string>
    <string name="send_confirmcode">Send Confirmation code </string>
    <string name="didnt_get_code">Did not receive a code? Resend </string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="how_you_rate">How do you rate your Pacifyr / Therapist</string>
    <string name="find_helping_pacifyr">Find a pacifyr who can help you</string>
    <string name="specify_emotion">Specify your emotion</string>
    <string name="talk_to_pacifyr">Talk to your pacifyr using chat,audio or video</string>
    <string name="skip">Skip</string>
    <string name="per_hour"> per hour</string>
    <string name="dashboard">Dashboard</string>
    <string name="profile">Profile</string>
    <string name="session_expired">Session expired</string>
    <string name="this_week">THIS WEEK</string>
    <string name="pref_pacifyrs">PREFFERED PACIFYRS</string>
    <string name="my_last_session">MY LAST SESSION</string>
    <string name="how_you_feel">HOW ARE YOU FEELING?</string>
    <string name="how_you_feel_now">How are you feeling now?</string>
    <string name="sessions">SESSIONS</string>
    <string name="hours">HOURS</string>
    <string name="available_min">AVAILABLE MIN</string>
    <string name="earnings">EARNINGS</string>
    <string name="starts">STARTS</string>
    <string name="customers">CUSTOMERS</string>
    <string name="today">TODAY</string>
    <string name="press_back_again_to_exit">Press back again to exit...!</string>
    <string name="logout">LOGOUT</string>
    <string name="online_l">Online</string>
    <string name="online">ONLINE</string>
    <string name="offline">OFFLINE</string>
    <string name="actions">Actions</string>
    <string name="rp_history">Receipt History</string>
    <string name="qr_code_hint">Use this QR code or address to deposit  </string>
    <string name="confirm_swap">Confirm Swap</string>
    <string name="withdraw">Withdraw</string>
    <string name="buy">Buy</string>
    <string name="sell">Sell</string>
    <string name="send">Send</string>
    <string name="swap_now">Swap Now</string>
    <string name="swap">Swap</string>
    <string name="proceed">Proceed</string>
    <string name="linked_accouts">Linked Accounts</string>
    <string name="exchange_rate">Exchange Rate</string>
    <string name="swap_accounts">Swap Accounts</string>
    <string name="add_payout_method">Add a Payout Method</string>
    <string name="proceed_to_withdraw">Proceed to Withdraw</string>
    <string name="buy_now">Buy Now</string>
    <string name="btc_price">BTC Price</string>
    <string name="trade_tech">Trade on Techbank</string>
    <string name="wdraw_tech">Withdraw from Techbank</string>
    <string name="payment_method">Payment method</string>
    <string name="techbank_fee">Techbank  Fee</string>
    <string name="instantly">Instantly  </string>
    <string name="total">Total</string>
    <string name="contact_now">Contact Now</string>
    <string name="checkout">Checkout</string>
    <string name="manage_payment">Manage Payment</string>
    <string name="phone_verification">Phone Verification </string>
    <string name="credecard_wallet">CredEcard Wallet</string>
    <string name="wire_transfer_deposit">Wire Transfer Deposit</string>
    <string name="receipt_confirmation">Receipt Confirmation</string>
    <string name="purchase_summary">Purchase Summary</string>
    <string name="sell_summary">Sell Summary</string>
    <string name="send_summary">Send Summary</string>
    <string name="error_max_opponents_count">You can select up to %d opponents</string>
    <string name="sign_up_error">Error creating new user, please try again</string>
    <string name="sign_in_error_with_error">Sign In error. Error</string>
    <string name="sign_in_error_without_error">Sign In error</string>
    <string name="logout_user_with_error">Logout user error. Error</string>
    <string name="error_empty_login">Login can not be empty</string>
    <string name="error_empty_chat_room_name">Chat room name can not be empty</string>
    <string name="login_chat_login_error">Login Chat error. Please relogin. Error</string>
    <string name="update_user_error">Update user error. Error</string>
    <string name="loading_users_error">Loading users error. Error</string>
    <string name="permission_unavailable">%s is not available now!</string>
    <string name="field_name_user_name">User name</string>
    <string name="field_name_chat_room_name">Chat room name</string>
    <string name="error_name_must_not_contain_special_characters_from_app">%1$s must contain 3 &#8212; %2$s alphanumeric Latin characters without space, the first char must be a letter</string>
    <string name="action_start_login">Done</string>
    <string name="action_settings">Settings</string>
    <string name="action_screen_share">Screen share</string>
    <string name="action_update_opponens_list">Update opponents list</string>
    <string name="action_logout">Logout</string>
    <string name="action_start_video_call">Video call</string>
    <string name="action_start_audio_call">Audio call</string>
    <string name="actionbar_title_settings">Settings</string>
    <string name="title_login_activity">Enter to chat</string>
    <string name="subtitle_text_logged_in_as">Logged in as %s</string>
    <string name="title_one_user_selected">%s user selected</string>
    <string name="tile_many_users_selected">%s users selected</string>
    <string name="incoming_call">Incoming Call</string>
    <string name="also_on_call">Also on call:</string>
    <string name="edit_opponents_list">Edit opponents list</string>
    <string name="incoming_audio_call">Incoming Audio Call</string>
    <string name="incoming_video_call">Incoming Video Call</string>
    <string name="user_list_on_call">User 1, User 2, User 3, User 4, User 5, User 6</string>
    <string name="opponent_pending">Pending</string>
    <string name="opponent_closed">Closed</string>
    <string name="text_incoming_audio_call">Incoming Audio Call</string>
    <string name="text_incoming_video_call">Incoming Video Call</string>
    <string name="text_status_connect">Connect…</string>
    <string name="text_status_checking">Checking…</string>
    <string name="text_status_connected">Connected</string>
    <string name="text_status_disconnected">Disconnected</string>
    <string name="text_status_rejected">Rejected</string>
    <string name="text_status_no_answer">No answer</string>
    <string name="text_status_hang_up">Hung up</string>
    <string name="text_status_closed">Closed</string>
    <string name="text_status_time_out">Time Out</string>
    <string name="text_status_failed">Failed</string>
    <string name="hint_user_name">User name</string>
    <string name="hint_chat_room_name">Chat room name</string>
    <string name="text_select_user_to_call">Select users you want to call</string>
    <string name="timer_text">00.00 </string>
    <string name="digit_text">0.0 </string>
</resources>