<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/Base_Detail.MatchParent"
 >
    <com.jpndev.utilitylibrary.DeviceFitImageView
        android:layout_width="wrap_content"
        android:id="@+id/close_dimv"
        app:layout_constraintTop_toBottomOf="@+id/guideline_top"
        app:layout_constraintLeft_toRightOf="@+id/g_card_left"
        android:layout_marginTop="0dp"
        android:visibility="visible"
        android:tint="?attr/tint_1"

        android:src="@drawable/icn_back_1"
        app:height_percentage="6"
        app:width_percentage="10"
        android:scaleType="fitStart"
        app:parameter="fixed_ratio"
        android:layout_height="wrap_content" />
    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline_top"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.02"/>
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/g_card_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.97" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/g_card_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.03" />
    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/g_modes_top"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.12"/>
    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/topbar_barrier"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="close_dimv,g_modes_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <RelativeLayout
        app:layout_constraintTop_toBottomOf="@+id/topbar_barrier"
        app:layout_constraintLeft_toRightOf="@+id/g_card_left"
        app:layout_constraintRight_toLeftOf="@+id/g_card_right"
android:layout_marginTop="0dp"
        android:visibility="visible"
        android:id="@+id/modes_rlay"
        android:layout_width="0dp"
        android:layout_height="wrap_content">




        <androidx.core.widget.NestedScrollView

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="fill_vertical"
            android:visibility="gone"

            android:descendantFocusability="blocksDescendants"
            android:fillViewport="true"
            android:paddingBottom="20dp"
            android:paddingTop="20dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"

            >
            <TextView
                android:id="@+id/web_cftxv"
                android:visibility="visible"
                android:textColor="@color/black"

                android:fontFamily="@string/ubuntu_regular"

                android:textSize="@dimen/_13ssp"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/app_white_bg"
                android:paddingTop="10dp"
                android:paddingBottom="20dp"/>

        </androidx.core.widget.NestedScrollView>

        <xyz.sangcomz.chameleon.Chameleon
            android:id="@+id/modes_chameleon"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/_2sdp"
            android:paddingRight="@dimen/_2sdp"
            android:layout_marginTop="@dimen/_2sdp"
            android:layout_marginLeft="@dimen/_1sdp"
            android:layout_marginRight="@dimen/_1sdp"
            android:layout_gravity="center"


            app:emptyButtonText="\t Tap to Refresh \t"
            app:emptyButtonTextColor="@color/white"
            app:emptyButtonBackgroundColor="@color/cursor1_color"
            app:emptyButtonTextSize="12sp"
            app:emptyDrawable="@drawable/ict_chamelon_error2"
            app:emptySubText=""
            app:emptyTextGravity="center"
            app:emptySubTextGravity="center"
            app:emptyText="@string/empty_trans"

            app:errorButtonBackgroundColor="@color/cursor1_color"
            app:errorButtonText="\t Tap to Retry \t"
            app:errorButtonTextColor="#ffffff"
            app:errorButtonTextSize="12sp"
            app:errorDrawable="@drawable/ict_chamelon_wifi_server_er"
            app:errorSubText=""
            app:errorText="@string/error2"
            app:errorTextGravity="center"
            app:errorSubTextGravity="center"


            app:isLargeProgress="false"
            app:progressDrawable="@drawable/custom_progressbar_drawable"
            app:useEmptyButton="false"
            app:useErrorButton="true"
            app:dState="CONTENT"
            >

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/modes_rcv"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingTop="@dimen/_2sdp"
                android:paddingBottom="@dimen/_20sdp"
                android:clipToPadding="false"
                android:nestedScrollingEnabled="true"
                android:overScrollMode="never"
                android:scrollbarStyle="outsideOverlay"
                android:visibility="visible"
                tools:itemCount="3"
                tools:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/rcv_item_modes"
                tools:orientation="vertical"
                tools:spanCount="1"

                />
        </xyz.sangcomz.chameleon.Chameleon>
<!--        <com.jpndev.utilitylibrary.DeviceFitImageView
            android:id="@+id/up_arrow_dimv"
            app:parameter="fixed_ratio"
            app:width_percentage="8"
            app:height_percentage="6"
            android:scaleType="fitCenter"
            android:src="@drawable/icn_arrow_up"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="@dimen/_10sdp"
            style="@style/DIMV_Template1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>-->




    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
